ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-app-name.com  # replace with your domain or load balancer URL
      http:
        paths:
        - path: /frontend
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3000
